--- a/apps/routerconsole/jsp/themes/console/light/console.css
+++ b/apps/routerconsole/jsp/themes/console/light/console.css
@@ -1177,14 +1177,27 @@ p:empty + .sb_notice {
 }
 
 .hostaddform {
-     display: inline-table;
-     width: 48%;
+     display: inline-block;
+     width: 45%;
+     vertical-align: top;
 }
 
 .hostadd {
-     height: 130px;
+     height: 25%;
      width: 100%;
      background: #fafaff !important;
+}
+
+@media screen and (max-width: 1080px) {
+.hostadd {
+     height: 35%;
+}
+}
+
+@media screen and (max-width: 540px) {
+.hostadd {
+     height: 45%;
+}
 }
 
 .hostaddaction {
